# django_logging_analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
tests/: test_collect_statistics.py  test_create_report.py  test_parse_args_cli.py  test_parse_log_line.py  test_process_file.py  test_read_files.py
