[tool.poetry]
name = "django_logging_analyzer"
version = "0.1.0"
description = "cli-приложение анализа журнала логирования."
authors = ["Tati Trif <tatitrif@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
